--- a/themes/custom/entyviohcp/templates/content/node--co-pay-and-patient-assistance-pr--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--co-pay-and-patient-assistance-pr--full.html.twig
@@ -1,2 +1,146 @@
 {{ attach_library('entyviohcp/entyvioconnect-affordability-styling') }}
-<h3 style="margin-top: 300px">TEST</h3>
+<div class="page-content connect-content" data-page-id="Affordability" data-page-category="AccessSupport">
+
+<div id="hero">
+    <div>
+            <picture>
+                <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/entyvioconnect-bg.png">
+                <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/entyvioconnect-hero_desktop.png">
+                <img src="{{ base_path ~ directory }}/images/hero/entyvioconnect-bg.png" alt="Patient.">
+            </picture>
+            <article data-only="desktop">
+                <div class="logo-ec"></div>
+                <div>
+                    <img class="entyvioconnect-logo" src="{{ base_path ~ directory }}/images/logos/logo-entyvioconnect.svg" alt="EntyvioConnect Logo.">
+                    <h1>Because each patient's<br> circumstances vary,</h1>
+                    <p>we offer a range of programs tailored to help patients in the way they need it most after the prescribing decision has been made.</p>
+                    <h2><a class="btn btn-secondary" href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Form.pdf" target="_blank">Enroll your patients</a></h2>
+                </div>
+            </article>
+                            </div>
+</div>
+
+<div id="first_section">
+    <div id="indication_bar" class="close">
+	<div>
+		<div class="section">
+			<h3>For adult patients with moderately to severely active UC or CD when other therapies have not worked well enough or cannot be&nbsp;tolerated.</h3>
+		</div>
+	</div>
+</div>
+        <div class="navigation-wrapper">
+        <section>
+            <h2><em data-ec="">EntyvioConnect</em> can help patients access their prescribed Entyvio therapy<br> <strong id="entyvioconnect_nav">How can we help your patient today?</strong></h2>
+            <div class="navigation-temp">
+                <a class="btn btn-secondary " href="{{ base_path }}access-support/insurance-support#entyvioconnect_nav" target="_self">Insurance Support</a>
+                <a class="btn btn-secondary selected" href="{{ base_path }}access-support/affordability#entyvioconnect_nav" target="_self">Affordability</a>
+                <a class="btn btn-secondary " href="{{ base_path }}access-support/patient-education#entyvioconnect_nav" target="_self">Patient Education</a>
+                <a class="btn btn-secondary " href="{{ base_path }}access-support/forms-resources#entyvioconnect_nav" target="_self">Forms &amp; Resources</a>
+            </div>
+            <div class="subheading">
+                <p><a href="#at-a-glance" class="offer-support-link" target="_self"><em data-ec="">EntyvioConnect</em> offers your patients support throughout the entire insurance approval process.</a></p>
+            </div>
+        </section>
+    </div>
+
+    <div id="affordability" class="section">
+        <section>
+            <div class="content">
+                <h2 class="teritary">Affordability</h2>
+                <p id="first-paragraph"><em data-ec="">EntyvioConnect</em> understands that each patient’s financial circumstances are unique, which is why <em data-ec="">EntyvioConnect</em> works closely with eligible patients to help them afford their treatment.</p>
+
+                <div>
+                    <h3>Does your patient need support with co‑pay costs?</h3>
+                    <ul data-bullet="primary">
+                        <li><strong class="primary">Co‑Pay Program:</strong> Eligible commercially insured patients pay as little as $5 per dose,* up to a total benefit of $20,000 per year</li>
+                        <li><strong class="primary">For patients who are government‑insured, underinsured, or rendered uninsured:</strong> Patient Support Managers can provide information about financial assistance options</li>
+                        <li><strong class="primary">Patient Assistance Program (PAP):</strong> Download and complete the PAP form for patients who may need additional financial assistance</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="image" data-only="desktop">
+                <img src="{{ base_path ~ directory }}/images/graphics/entyvioconnect_affordability.png" alt="Patient and healthcare provider." title="Patient and Healthcare Provider" class="affordability">
+            </div>
+        </section>
+    </div>
+
+
+    <div id="affordability_download" class="section">
+        <div>
+            <section class="download-section">
+                <h3>Download resources for treatment affordability</h3>
+                <ul>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Form.pdf" target="_blank"><em>EntyvioConnect</em> Enrollment Form</a></li>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Entyvio-Co-Pay-Claim-Form.pdf" target="_blank">Entyvio Co‑Pay Claim Form</a></li>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Entyvio-Patient-Assistance-Program-Form.pdf" target="_blank">Patient Assistance Form</a></li>
+                </ul>
+            </section>
+
+            <section id="entyvioconnect_contact">
+                <div>
+                    <img src="{{ base_path ~ directory }}/images/icons/ec-phone.svg" alt="Phone icon.">
+                    <p>You can speak directly to<br data-only="desktop"> a Patient Support Manager for<br data-only="desktop"> more information at <a href="tel:1-855-368-9846">1‑855‑ENTYVIO <br data-only="desktop">(1‑855‑368‑9846)</a>,<br><span>Monday to Friday, from 8&nbsp;am to 8&nbsp;pm ET (except holidays).</span></p>
+                </div>
+            </section>
+
+            <section class="legal">
+                <p><span class="sup">*</span>The <em data-ec="">EntyvioConnect</em> Co-Pay Program ("Co-Pay Program") provides financial support for commercially insured patients who qualify for the Co-Pay Program. The Co-Pay Program cannot be used if patient is a beneficiary of, or any part of the prescription is covered by: 1) any federal-, state-, or government-funded healthcare program (Medicare, Medicare Advantage, Medicaid, TRICARE, etc.), including a state pharmaceutical assistance program (the Federal Employees Health Benefit [FEHB] Program is not a government-funded healthcare program for the purpose of this offer), 2) the Medicare Prescription Drug Program (Part D), or if patient is currently in the coverage gap, or 3) insurance that is paying the entire cost of the prescription. Patient may not seek reimbursement from any other plan or program (Flexible Spending Account [FSA], Health Savings Account [HSA], Health Reimbursement Account [HRA], etc.) for any out-of-pocket costs covered by the Co-Pay Program. Patient or healthcare provider may be required to submit an Explanation of Benefits (EOB) following each infusion to the Co-Pay Program. Takeda reserves the right to change or end the Co-Pay Program at any time without notice, and other terms and conditions may apply. Offer not valid for patients under 18 years of age. Assistance under the Co-Pay Program is not transferable. The Co-Pay Program only applies in the United States, including Puerto Rico and other U.S. territories, and does not apply where prohibited by law, taxed, or restricted. This does not constitute health insurance. Void where use is prohibited by your insurance provider. If your insurance situation changes you must notify <em data-ec="">EntyvioConnect</em> at 1-844-368-9846. This offer is not transferable and is limited to one offer per person and may not be combined with any other coupon, discount, prescription savings card, rebate, free trial, patient assistance, or other offer. Not valid if reproduced.</p>
+            </section>
+        </div>
+    </div>
+
+    <div id="at-a-glance" class="section">
+    <section>
+        <h2 class="teritary"><em data-ec="">EntyvioConnect</em> At a Glance</h2>
+        <p><em data-ec="">EntyvioConnect</em> offers your patients support throughout the entire insurance approval process.</p>
+        <div class="image-container">
+            <figure>
+                <picture>
+                    <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/charts/entyvioconnect-mobile-chart.png">
+                    <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/charts/entyvioconnect-desktop-chart.png">
+                    <img src="{{ base_path ~ directory }}/images/charts/entyvioconnect-desktop-chart.png" alt="EntyvioConnect insurance process flow chart." title="EntyvioConnect Flow Chart">
+                </picture>
+            </figure>
+        </div>
+    </section>
+</div>
+</div>
+</div>
+<div id="isi">
+                <aside class="section">
+	<article>
+		<button class="fixed_isi_trigger" aria-expanded="false" aria-controls="fixed_isi" aria-label="ISI Expand Button">
+            <span></span>
+        </button>
+        <div class="isi-header">
+            <h2>Important Safety Information</h2>
+        </div>
+		<ul>
+			<li>ENTYVIO (vedolizumab) for injection is contraindicated in patients who have had a known serious or severe hypersensitivity reaction to ENTYVIO or any of its excipients.</li>
+
+			<li>Infusion-related reactions and hypersensitivity reactions including anaphylaxis, dyspnea, bronchospasm, urticaria, flushing, rash, and increased blood pressure and heart rate have been reported. These reactions may occur with the first or subsequent infusions and may vary in their time of onset from during infusion or up to several hours post-infusion. If anaphylaxis or other serious infusion-related or hypersensitivity reactions occur, discontinue administration of ENTYVIO immediately and initiate appropriate treatment.</li>
+
+			<li>Patients treated with ENTYVIO are at increased risk for developing infections. Serious infections have been reported in patients treated with ENTYVIO, including anal abscess, sepsis (some fatal), tuberculosis, salmonella sepsis, Listeria meningitis, giardiasis, and cytomegaloviral colitis. ENTYVIO is not recommended in patients with active, severe infections until the infections are controlled. Consider withholding ENTYVIO in patients who develop a severe infection while on treatment with ENTYVIO. Exercise caution in patients with a history of recurring severe infections. Consider screening for tuberculosis (TB) according to the local practice.</li>
+
+			<li>Progressive multifocal leukoencephalopathy (PML), a rare and often fatal opportunistic infection of the central nervous system (CNS), has been reported with systemic immunosuppressants, including another integrin receptor antagonist. PML is caused by the John Cunningham (JC) virus and typically only occurs in patients who are immunocompromised. One case of PML in an ENTYVIO-treated patient with multiple contributory factors has been reported in the postmarketing setting (e.g., human immunodeficiency virus [HIV] infection with a CD4 count of 300 cells/mm<sup>3</sup> and prior and concomitant immunosuppression). Although unlikely, a risk of PML cannot be ruled out. Monitor patients for any new or worsening neurological signs or symptoms. Typical signs and symptoms associated with PML are diverse, progress over days to weeks, and include progressive weakness on one side of the body or clumsiness of limbs, disturbance of vision, and changes in thinking, memory, and orientation leading to confusion and personality changes. If PML is suspected, withhold dosing with ENTYVIO and refer to a neurologist; if confirmed, discontinue ENTYVIO dosing permanently.</li>
+
+			<li>There have been reports of elevations of transaminase and/or bilirubin in patients receiving ENTYVIO. ENTYVIO should be discontinued in patients with jaundice or other evidence of significant liver injury.</li>
+
+			<li>Prior to initiating treatment with ENTYVIO, all patients should be brought up to date with all immunizations according to current immunization guidelines. Patients receiving ENTYVIO may receive non-live vaccines and may receive live vaccines if the benefits outweigh the risks.</li>
+
+			<li>Most common adverse reactions (incidence ≥3% and ≥1% higher than placebo): nasopharyngitis, headache, arthralgia, nausea, pyrexia, upper respiratory tract infection, fatigue, cough, bronchitis, influenza, back pain, rash, pruritus, sinusitis, oropharyngeal pain, and pain in extremities.</li>
+		</ul>
+
+		<h2>Indications</h2>
+		<h3>Adult Ulcerative Colitis (UC)</h3>
+		<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active UC.</p>
+
+		<h3>Adult Crohn's Disease (CD)</h3>
+		<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active CD.</p>
+
+		<p>Please see <a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">full Prescribing Information</a>, including <a href="https://general.takedapharm.com/ENTYVIOMG" target="_blank" rel="noreferrer">Medication Guide</a>.</p>
+	</article>
+</aside>
+
+            </div>
