--- a/themes/custom/entyviohcp/css/all.css
+++ b/themes/custom/entyviohcp/css/all.css
@@ -34,6 +34,9 @@ body,
     width: 100%;
     -webkit-text-size-adjust: 100%;
 }
+body{
+  padding-top: 0 !important;
+}
 #layout {
     overflow: hidden;
 }
