--- a/themes/custom/entyviohcp/templates/content/node--forms-and-resources--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--forms-and-resources--full.html.twig
@@ -1,2 +1,165 @@
 {{ attach_library('entyviohcp/forms-resources-styling') }}
-<h4 style="margin-top: 300px">TEST</h4>
+<div class="page-content connect-content" data-page-id="FormsResources" data-page-category="AccessSupport">
+
+<div id="hero">
+    <div>
+<picture>
+                <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/entyvioconnect-bg.png">
+                <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/entyvioconnect-hero_desktop.png">
+                <img src="{{ base_path ~ directory }}/images/hero/entyvioconnect-bg.png" alt="Patient.">
+            </picture>
+            <article data-only="desktop">
+                <div class="logo-ec"></div>
+                <div>
+                    <img class="entyvioconnect-logo" src="{{ base_path ~ directory }}/images/logos/logo-entyvioconnect.svg" alt="EntyvioConnect Logo.">
+                    <h1>Because each patient's<br> circumstances vary,</h1>
+                    <p>we offer a range of programs tailored to help patients in the way they need it most after the prescribing decision has been made.</p>
+                    <h2><a class="btn btn-secondary" href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Form.pdf" target="_blank">Enroll your patients</a></h2>
+                </div>
+            </article>
+                            </div>
+</div>
+
+<div id="first_section">
+    <div id="indication_bar" class="close">
+	<div>
+		<div class="section">
+			<h3>For adult patients with moderately to severely active UC or CD when other therapies have not worked well enough or cannot be&nbsp;tolerated.</h3>
+		</div>
+	</div>
+</div>
+        <div class="navigation-wrapper">
+        <section>
+            <h2><em data-ec="">EntyvioConnect</em> can help patients access their prescribed Entyvio therapy<br> <strong id="entyvioconnect_nav">How can we help your patient today?</strong></h2>
+            <div class="navigation-temp">
+                <a class="btn btn-secondary " href="{{ base_path }}access-support/insurance-support#entyvioconnect_nav" target="_self">Insurance Support</a>
+                <a class="btn btn-secondary " href="{{ base_path }}access-support/affordability#entyvioconnect_nav" target="_self">Affordability</a>
+                <a class="btn btn-secondary " href="{{ base_path }}access-support/patient-education#entyvioconnect_nav" target="_self">Patient Education</a>
+                <a class="btn btn-secondary selected" href="{{ base_path }}access-support/forms-resources#entyvioconnect_nav" target="_self">Forms &amp; Resources</a>
+            </div>
+            <div class="subheading">
+                <p><a href="#at-a-glance" class="offer-support-link" target="_self"><em data-ec="">EntyvioConnect</em> offers your patients support throughout the entire insurance approval process.</a></p>
+            </div>
+        </section>
+    </div>
+
+    <div id="FormsResources" class="section">
+        <section>
+            <h2 class="teritary">Download Forms &amp; Resources</h2>
+
+            <div class="content">
+                <h3>Insurance support</h3>
+                <p class="insurance-support-description">Refer to these tools as a guide during the prior authorization process.</p>
+
+                <div>
+                    <ul>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Form.pdf" target="_blank"><em>EntyvioConnect</em> Enrollment Form</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Sample-Letter-of-Medical-Necessity.docx" target="_blank">Letter of Medical Necessity</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Sample-Letter-of-Appeal.docx" target="_blank">Letter of Appeal</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Appeal-Letter-for-Rejected-Claim.docx" target="_blank">Appeal Letter for Rejected Claim</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Entyvio-Reimbursement-Toolkit.pdf" target="_blank">Reimbursement Toolkit</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <ul>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Hospital-Outpatient-Sample-UB-04-Claim-Form.pdf" target="_blank">Hospital Outpatient Sample UB-04 Claim</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Hospital-Outpatient-Sample-UB-04-Claim-Form-Instructions.pdf" target="_blank">Hospital Outpatient Sample UB-04 Claim Instructions</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Physician-Office-Sample-CMS-1500-Claim-Form.pdf" target="_blank">Physician Office CMS‑1500 Sample Claim</a></li>
+                        <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Physician-Office-Sample-CMS-1500-Claim-Form-Instructions.pdf" target="_blank">Physician Office CMS‑1500 Sample Claim Instructions</a></li>
+                        <li data-icon="download"><a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank">Prescribing Information</a></li>
+                    </ul>
+                </div>
+
+                <p><strong>These resources are provided for informational purposes only and are not intended to provide reimbursement or legal advice. Contact third-party payers for specific information on their current coverage, reimbursement, and coding policies.</strong></p>
+            </div>
+        </section>
+    </div>
+
+
+    <div id="affordability_download" class="section">
+        <div>
+            <section class="download-section">
+                <h3>Affordability</h3>
+                <h4>Get more information on EntyvioConnect financial assistance options for your patients.</h4>
+                <ul>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Form.pdf" target="_blank"><em data-ec="">EntyvioConnect</em> Enrollment Form</a></li>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Entyvio-Co-Pay-Claim-Form.pdf" target="_blank">Entyvio Co-Pay Claim Form</a></li>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/Entyvio-Patient-Assistance-Program-Form.pdf" target="_blank">Patient Assistance Form</a></li>
+                </ul>
+            </section>
+
+            <section class="download-section">
+                <h3>Patient education</h3>
+                <h4>Provide these materials to your patients to help them access treatment.</h4>
+                <ul>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Form.pdf" target="_blank"><em data-ec="">EntyvioConnect</em> Enrollment Form</a></li>
+                    <li data-icon="download"><a href="{{ base_path ~ directory }}/pdf/EntyvioConnect-Enrollment-Guide.pdf" target="_blank"><em data-ec="">EntyvioConnect</em> Enrollment Guide</a></li>
+                    <li data-icon="site"><a href="https://www.entyvio.com/discuss-your-symptoms" data-modal="external" data-animation="slide" target="_blank">Doctor/Patient Discussion&nbsp;Guide link</a></li>
+                </ul>
+            </section>
+
+            <section class="contact-purple-bg">
+                <h3>Still can't find what you're looking for?<br><br>Contact <em data-ec="">EntyvioConnect</em> at <a href="tel:1‑855‑368‑9846" data-nobr="desktop">1‑855‑ENTYVIO (1‑855‑368‑9846)</a><br data-only="desktop"> or reach out to your <br data-only="mobile">Field Reimbursement Manager.</h3>
+            </section>
+        </div>
+    </div>
+
+    <div id="at-a-glance" class="section">
+    <section>
+        <h2 class="teritary"><em data-ec="">EntyvioConnect</em> At a Glance</h2>
+        <p><em data-ec="">EntyvioConnect</em> offers your patients support throughout the entire insurance approval process.</p>
+        <div class="image-container">
+            <figure>
+                <picture>
+                    <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/charts/entyvioconnect-mobile-chart.png">
+                    <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/charts/entyvioconnect-desktop-chart.png">
+                    <img src="{{ base_path ~ directory }}/images/charts/entyvioconnect-desktop-chart.png" alt="EntyvioConnect insurance process flow chart." title="EntyvioConnect Flow Chart">
+                </picture>
+            </figure>
+        </div>
+    </section>
+</div>
+</div>
+
+                <!-- *********************** -->
+                <!-- **** CODE ENDS **** *** -->
+                <!-- *********************** -->
+            </div>
+<div id="isi">
+                <aside class="section">
+	<article>
+		<button class="fixed_isi_trigger" aria-expanded="false" aria-controls="fixed_isi" aria-label="ISI Expand Button">
+            <span></span>
+        </button>
+        <div class="isi-header">
+            <h2>Important Safety Information</h2>
+        </div>
+		<ul>
+			<li>ENTYVIO (vedolizumab) for injection is contraindicated in patients who have had a known serious or severe hypersensitivity reaction to ENTYVIO or any of its excipients.</li>
+
+			<li>Infusion-related reactions and hypersensitivity reactions including anaphylaxis, dyspnea, bronchospasm, urticaria, flushing, rash, and increased blood pressure and heart rate have been reported. These reactions may occur with the first or subsequent infusions and may vary in their time of onset from during infusion or up to several hours post-infusion. If anaphylaxis or other serious infusion-related or hypersensitivity reactions occur, discontinue administration of ENTYVIO immediately and initiate appropriate treatment.</li>
+
+			<li>Patients treated with ENTYVIO are at increased risk for developing infections. Serious infections have been reported in patients treated with ENTYVIO, including anal abscess, sepsis (some fatal), tuberculosis, salmonella sepsis, Listeria meningitis, giardiasis, and cytomegaloviral colitis. ENTYVIO is not recommended in patients with active, severe infections until the infections are controlled. Consider withholding ENTYVIO in patients who develop a severe infection while on treatment with ENTYVIO. Exercise caution in patients with a history of recurring severe infections. Consider screening for tuberculosis (TB) according to the local practice.</li>
+
+			<li>Progressive multifocal leukoencephalopathy (PML), a rare and often fatal opportunistic infection of the central nervous system (CNS), has been reported with systemic immunosuppressants, including another integrin receptor antagonist. PML is caused by the John Cunningham (JC) virus and typically only occurs in patients who are immunocompromised. One case of PML in an ENTYVIO-treated patient with multiple contributory factors has been reported in the postmarketing setting (e.g., human immunodeficiency virus [HIV] infection with a CD4 count of 300 cells/mm<sup>3</sup> and prior and concomitant immunosuppression). Although unlikely, a risk of PML cannot be ruled out. Monitor patients for any new or worsening neurological signs or symptoms. Typical signs and symptoms associated with PML are diverse, progress over days to weeks, and include progressive weakness on one side of the body or clumsiness of limbs, disturbance of vision, and changes in thinking, memory, and orientation leading to confusion and personality changes. If PML is suspected, withhold dosing with ENTYVIO and refer to a neurologist; if confirmed, discontinue ENTYVIO dosing permanently.</li>
+
+			<li>There have been reports of elevations of transaminase and/or bilirubin in patients receiving ENTYVIO. ENTYVIO should be discontinued in patients with jaundice or other evidence of significant liver injury.</li>
+
+			<li>Prior to initiating treatment with ENTYVIO, all patients should be brought up to date with all immunizations according to current immunization guidelines. Patients receiving ENTYVIO may receive non-live vaccines and may receive live vaccines if the benefits outweigh the risks.</li>
+
+			<li>Most common adverse reactions (incidence ≥3% and ≥1% higher than placebo): nasopharyngitis, headache, arthralgia, nausea, pyrexia, upper respiratory tract infection, fatigue, cough, bronchitis, influenza, back pain, rash, pruritus, sinusitis, oropharyngeal pain, and pain in extremities.</li>
+		</ul>
+
+		<h2>Indications</h2>
+		<h3>Adult Ulcerative Colitis (UC)</h3>
+		<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active UC.</p>
+
+		<h3>Adult Crohn's Disease (CD)</h3>
+		<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active CD.</p>
+
+		<p>Please see <a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">full Prescribing Information</a>, including <a href="https://general.takedapharm.com/ENTYVIOMG" target="_blank" rel="noreferrer">Medication Guide</a>.</p>
+	</article>
+</aside>
+
+            </div>
