--- a/themes/custom/entyviohcp/css/header.css
+++ b/themes/custom/entyviohcp/css/header.css
@@ -138,7 +138,7 @@ header{
     transition: all .2s linear;
   }
   header[data-device="desktop"] .main-nav nav li.has-submenu:hover .icon-trigger {
-    transform: translateY(-50%) rotate(-180deg);
+    transform: translateY(-50%) ;
   }
 
   header[data-device="desktop"] .main-nav .logo {
