--- a/themes/custom/entyviohcp/templates/content/node--articles-for-healthcare-professi--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--articles-for-healthcare-professi--full.html.twig
@@ -1,2 +1,122 @@
 {{ attach_library('entyviohcp/articles-for-healthcare-styling') }}
-<h3 style="margin-top: 300px">articles-for-healthcare</h3>
+<div class="page-content resources-content" data-page-id="ClinicalReprints" data-page-category="Resources">
+                <div id="skip-to-content"></div>
+                <!-- ************************* -->
+                <!-- **** CODE STARTS **** *** -->
+                <!-- ************************* -->
+
+
+
+
+
+    <div id="hero">
+    <div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <picture>
+                <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/mobile-resources-patient.png">
+                <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/desktop-resources-patient.png">
+                <img src="{{ base_path ~ directory }}/images/hero/desktop-resources-patient.png" alt="Patient.">
+            </picture>
+                <article>
+                    <div>
+                        <h1>
+                            Resources
+                        </h1>
+                    </div>
+
+                    <div>
+                        <h2>Information<br> to Help You<br> and Your Patients</h2>
+                    </div>
+                </article>
+            <picture>
+                <source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/mobile-resources-stu.png">
+                <source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/desktop-resources-stu.png">
+                <img src="{{ base_path ~ directory }}/images/hero/desktop-resources-stu.png" alt="Healthcare professional.">
+            </picture>
+
+
+
+                            </div>
+</div>
+
+    <div id="first_section">
+        <div id="indication_bar" class="close">
+	<div>
+		<div class="section">
+			<h3>For adult patients with moderately to severely active UC or CD when other therapies have not worked well enough or cannot be&nbsp;tolerated.</h3>
+		</div>
+	</div>
+</div>
+
+        <div class="body-content">
+            <article>
+                <div class="title-area">
+                    <p class="go-back"><a href="{{ base_path }}resources/professional-resources" target="_self">Back to Resources list</a></p>
+                    <h2 class="border">Clinical Reprints</h2>
+                    <h3>Read about Entyvio in articles from Gut, an International Journal of Gastroenterology and Hepatology, the&nbsp;New England Journal of Medicine, and Alimentary Pharmacology &amp; Therapeutics.</h3>
+                    <p>These articles are provided by Takeda for discussion of FDA approved uses.<br> Vedolizumab should be used only according to the accompanying complete prescribing information.</p>
+                </div>
+
+                <div class="main-container-blank">
+                    <div class="cta">
+                        <section>
+                            <div class="top">Landmark study</div>
+                            <h2>Vedolizumab vs adalimumab for moderate to severe ulcerative colitis—the VARSITY study</h2>
+                            <h3>The New England Journal of Medicine</h3>
+                            <p>VARSITY—the first head-to-head study of biologic therapies for moderate to severe ulcerative colitis.<sup>1,2</sup></p>
+                            <p class="legal">For information related to adalimumab, please see www.abbvie.com.</p>
+                            <p><a data-modal="external_third_party" data-animation="slide" href="https://www.nejm.org/doi/full/10.1056/NEJMoa1905725" class="btn btn-secondary" target="_blank" rel="noreferrer">Read Full Text</a></p>
+                            <p class="isi-link"><a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">See Entyvio full Prescribing&nbsp;Information</a></p>
+                        </section>
+
+                        <section>
+                            <h2>The safety of vedolizumab for&nbsp;ulcerative&nbsp;colitis and Crohn's&nbsp;disease</h2>
+                            <h3>Gut: An International Journal of Gastroenterology and Hepatology</h3>
+                            <p>A study assessing the safety profile of vedolizumab in over 2800 patients over an extended period of time.<sup>3</sup></p>
+                            <p><a data-modal="external_third_party" data-animation="slide" href="https://gut.bmj.com/content/66/5/839" class="btn btn-secondary" target="_blank" rel="noreferrer">Read Full Text</a></p>
+                            <p class="isi-link"><a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">See Entyvio full Prescribing&nbsp;Information</a></p>
+                        </section>
+
+                        <section>
+                            <h2>Vedolizumab as induction and maintenance therapy for ulcerative colitis</h2>
+                            <h3>The New England Journal of Medicine</h3>
+                            <p>A study evaluating the efficacy and safety of vedolizumab in adult patients with moderately to severely active ulcerative colitis.<sup>4</sup></p>
+                            <p><a data-modal="external_third_party" data-animation="slide" href="https://www.nejm.org/doi/full/10.1056/NEJMoa1215734" class="btn btn-secondary" target="_blank" rel="noreferrer">Read Full Text</a></p>
+                            <p class="isi-link"><a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">See Entyvio full Prescribing&nbsp;Information</a></p>
+                        </section>
+
+                        <section>
+                            <h2>Long-term safety of vedolizumab therapy for inflammatory bowel disease</h2>
+                            <h3>Alimentary Pharmacology &amp; Therapeutics</h3>
+                            <p>A final analysis of the long‑term safety results of vedolizumab treatment of up to 7&nbsp;years in over 2200&nbsp;patients with moderate to severely active UC or&nbsp;CD.<sup>5</sup></p>
+                            <p><a data-modal="external_third_party" data-animation="slide" href="https://compas.atheneum.co/weblink/d7f568de74e4942a0174e5bc075f00a7" class="btn btn-secondary" target="_blank" rel="noreferrer">Read Full Text</a></p>
+                            <p class="isi-link"><a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">See Entyvio full Prescribing&nbsp;Information</a></p>
+                        </section>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </div>
+
+
+
+
+                <!-- *********************** -->
+                <!-- **** CODE ENDS **** *** -->
+                <!-- *********************** -->
+            </div>
