--- a/themes/custom/entyviohcp/templates/content/node--request-an-representative--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--request-an-representative--full.html.twig
@@ -1,2 +1,286 @@
 {{ attach_library('entyviohcp/request-an-representative-styling') }}
-<h3 style="margin-top: 300px">request-an-representative</h3>
+<div class="page-content resources-content" data-page-id="RequestARepresentative" data-page-category="Resources">
+	<div id="skip-to-content"></div>
+
+	<div id="hero">
+		<div>
+			<picture>
+				<source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/mobile-resources-patient.png">
+				<source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/desktop-resources-patient.png">
+				<img src="{{ base_path ~ directory }}/images/hero/desktop-resources-patient.png" alt="Patient.">
+			</picture>
+			<article>
+				<div>
+					<h1>
+						Resources
+					</h1>
+				</div>
+
+				<div>
+					<h2>Information<br>
+						to Help You<br>
+						and Your Patients</h2>
+				</div>
+			</article>
+			<picture>
+				<source media="screen and (max-width: 959px)" srcset="{{ base_path ~ directory }}/images/hero/mobile-resources-stu.png">
+				<source media="screen and (max-width: 9999px) and (min-width: 960px)" srcset="{{ base_path ~ directory }}/images/hero/desktop-resources-stu.png">
+				<img src="{{ base_path ~ directory }}/images/hero/desktop-resources-stu.png" alt="Healthcare professional.">
+			</picture>
+
+
+		</div>
+	</div>
+
+	<div id="first_section">
+		<div id="indication_bar" class="close">
+			<div>
+				<div class="section">
+					<h3>For adult patients with moderately to severely active UC or CD when other therapies have not worked well enough or cannot be&nbsp;tolerated.</h3>
+				</div>
+			</div>
+		</div>
+
+		<div class="body-content">
+			<article>
+				<div class="title-area">
+					<p class="go-back">
+						<a href="{{ base_path }}resources/professional-resources" target="_self">Back to Resources list</a>
+					</p>
+					<h2 class="border">Request A Representative</h2>
+					<h3>Connect with an Entyvio Clinical Sales Specialist.</h3>
+				</div>
+
+				<div class="main-container">
+					<form action="{{ base_path }}vital/requestrep" method="post" class="requestRep" id="requestRep" name="requestRep" novalidate="novalidate">
+						<input name="__RequestVerificationToken" type="hidden" value="MAy9uKkRHTW5k9NEJ3IaJbLqf_RjveAHxRIeJskSNpZim52FzvESAuQOj0XQC7a-mTgA3bX8UZnkH5VSHPMUqPsVOVtAjLBZro8UrOEI-MQ1">
+						<section data-step="1">
+							<div>
+								<h2>Please fill out the appropriate fields indicated to have a Takeda representative contact you.</h2>
+							</div>
+							<div>
+								<div class="content">
+									<fieldset>
+										<div>
+											<div data-form="radio">
+												<input name="IDType" data-val="true" data-val-required="Please make a selection." id="DEA" type="radio" value="DEA">
+												<label for="DEA">
+													<strong>DEA #</strong>
+												</label>
+											</div>
+											<div data-form="radio">
+												<input name="IDType" id="ME" type="radio" value="ME">
+												<label for="ME">
+													<strong>ME #</strong>
+												</label>
+											</div>
+											<div data-form="radio">
+												<input name="IDType" id="SLN" type="radio" value="SLN">
+												<label for="SLN">
+													<strong>SLN #</strong>
+												</label>
+											</div>
+											<div data-form="radio">
+												<input name="IDType" id="NPI" type="radio" value="NPI">
+												<label for="NPI">
+													<strong>NPI #</strong>
+												</label>
+											</div>
+											<span class="field-validation-valid" data-valmsg-for="IDType" data-valmsg-replace="true"></span>
+											<p class="npi-lookup hidden">
+												<a href="https://npiregistry.cms.hhs.gov/" data-modal="external_third_party" data-animation="slide" target="_blank" rel="noreferrer">Click here</a>
+												to look up your NPI #.</p>
+										</div>
+									</fieldset>
+
+									<input class="idnumber" data-val="true" data-val-idtype="#DEA" data-val-maxlength="The field IDDEA must be a string or array type with a maximum length of '30'." data-val-maxlength-max="30" id="IDDEA" maxlength="30" name="IDDEA" type="text" value="">
+									<label class="visuallyhidden" for="IDDEA">DEA</label>
+									<span class="field-validation-valid" data-valmsg-for="IDDEA" data-valmsg-replace="true"></span>
+
+									<input class="idnumber hidden" data-val="true" data-val-idtype="#ME" data-val-maxlength="The field IDME must be a string or array type with a maximum length of '30'." data-val-maxlength-max="30" id="IDME" maxlength="30" name="IDME" type="text" value="">
+									<label class="visuallyhidden" for="IDME">ME</label>
+									<span class="field-validation-valid" data-valmsg-for="IDME" data-valmsg-replace="true"></span>
+
+									<input class="idnumber hidden" data-val="true" data-val-idtype="#SLN" data-val-maxlength="The field IDSLN must be a string or array type with a maximum length of '30'." data-val-maxlength-max="30" id="IDSLN" maxlength="30" name="IDSLN" type="text" value="">
+									<label class="visuallyhidden" for="IDSLN">SLN</label>
+									<span class="field-validation-valid" data-valmsg-for="IDSLN" data-valmsg-replace="true"></span>
+
+									<input class="idnumber hidden" data-val="true" data-val-idtype="#NPI" data-val-maxlength="The field IDNPI must be a string or array type with a maximum length of '30'." data-val-maxlength-max="30" id="IDNPI" maxlength="30" name="IDNPI" type="text" value="">
+									<label class="visuallyhidden" for="IDNPI">NPI</label>
+									<span class="field-validation-valid" data-valmsg-for="IDNPI" data-valmsg-replace="true"></span>
+
+									<input data-val="true" data-val-maxlength="The field ID must be a string or array type with a maximum length of '30'." data-val-maxlength-max="30" data-val-required="Please enter your identification number." id="ID" name="ID" type="hidden" value="">
+									<span class="field-validation-valid" data-valmsg-for="ID" data-valmsg-replace="true"></span>
+									<label for="FirstName">First Name</label>
+									<input data-val="true" data-val-maxlength="The field First Name must be a string or array type with a maximum length of '50'." data-val-maxlength-max="50" data-val-required="Please enter your first name." id="FirstName" maxlength="50" name="FirstName" type="text" value="">
+									<span class="field-validation-valid" data-valmsg-for="FirstName" data-valmsg-replace="true"></span>
+									<label for="LastName">Last Name</label>
+									<input data-val="true" data-val-maxlength="The field Last Name must be a string or array type with a maximum length of '50'." data-val-maxlength-max="50" data-val-required="Please enter your last name." id="LastName" maxlength="50" name="LastName" type="text" value="">
+									<span class="field-validation-valid" data-valmsg-for="LastName" data-valmsg-replace="true"></span>
+								</div>
+								<p>
+									<button id="step_1_submit" class="btn btn-primary" type="submit" formaction="{{ base_path }}vital/validateuser">Continue</button>
+								</p>
+								<div class="error hidden"></div>
+							</div>
+						</section>
+						<section data-step="2" class="hidden">
+							<div>
+								<h2>Please fill out the appropriate fields indicated to have a Takeda representative contact you.</h2>
+							</div>
+							<div>
+								<div class="content">
+									<label for="Email">Email</label>
+									<input data-val="true" data-val-regex="Please enter a valid email address." data-val-regex-pattern="^([-!#$%&amp;'&quot;\*\+/=?^_`{|}~\w\[\]\.]+)@([-\w\.\[\]:]+)\.([-\w\[\]:]+)$" data-val-required="Please enter your email address." id="Email" name="Email" type="email" value="">
+									<span class="field-validation-valid" data-valmsg-for="Email" data-valmsg-replace="true"></span>
+									<label for="Phone">Phone Number</label>
+									<input data-val="true" data-val-maxlength="The field Phone Number must be a string or array type with a maximum length of '10'." data-val-maxlength-max="10" data-val-required="Please enter a valid 10 digit phone number." id="Phone" maxlength="10" name="Phone" type="tel" value="">
+									<span class="field-validation-valid" data-valmsg-for="Phone" data-valmsg-replace="true"></span>
+
+									<div>
+										<div class="half">
+											<label for="Address1" maxlength="255">Address line 1</label>
+											<input data-val="true" data-val-maxlength="The field Address line 1 must be a string or array type with a maximum length of '255'." data-val-maxlength-max="255" data-val-required="Please enter your address." id="Address1" name="Address1" type="text" value="">
+											<span class="field-validation-valid" data-valmsg-for="Address1" data-valmsg-replace="true"></span>
+										</div>
+										<div class="half">
+											<label for="Address2">Address line 2</label>
+											<input data-val="true" data-val-maxlength="The field Address line 2 must be a string or array type with a maximum length of '255'." data-val-maxlength-max="255" id="Address2" maxlength="255" name="Address2" type="text" value="">
+											<span class="field-validation-valid" data-valmsg-for="Address2" data-valmsg-replace="true"></span>
+										</div>
+									</div>
+									<label for="City">City</label>
+									<input data-val="true" data-val-maxlength="The field City must be a string or array type with a maximum length of '50'." data-val-maxlength-max="50" data-val-required="Please enter your city." id="City" maxlength="50" name="City" type="text" value="">
+									<span class="field-validation-valid" data-valmsg-for="City" data-valmsg-replace="true"></span>
+
+									<div>
+										<div class="half">
+											<label for="State">State</label>
+											<select data-val="true" data-val-maxlength="The field State must be a string or array type with a maximum length of '2'." data-val-maxlength-max="2" data-val-required="Please select your state." id="State" name="State">
+												<option value="">State</option>
+												<option value="AK">AK</option>
+												<option value="AL">AL</option>
+												<option value="AR">AR</option>
+												<option value="AZ">AZ</option>
+												<option value="CA">CA</option>
+												<option value="CO">CO</option>
+												<option value="CT">CT</option>
+												<option value="DC">DC</option>
+												<option value="DE">DE</option>
+												<option value="FL">FL</option>
+												<option value="GA">GA</option>
+												<option value="HI">HI</option>
+												<option value="IA">IA</option>
+												<option value="ID">ID</option>
+												<option value="IL">IL</option>
+												<option value="IN">IN</option>
+												<option value="KS">KS</option>
+												<option value="KY">KY</option>
+												<option value="LA">LA</option>
+												<option value="MA">MA</option>
+												<option value="MD">MD</option>
+												<option value="ME">ME</option>
+												<option value="MI">MI</option>
+												<option value="MN">MN</option>
+												<option value="MO">MO</option>
+												<option value="MS">MS</option>
+												<option value="MT">MT</option>
+												<option value="NC">NC</option>
+												<option value="ND">ND</option>
+												<option value="NE">NE</option>
+												<option value="NH">NH</option>
+												<option value="NJ">NJ</option>
+												<option value="NM">NM</option>
+												<option value="NV">NV</option>
+												<option value="NY">NY</option>
+												<option value="OH">OH</option>
+												<option value="OK">OK</option>
+												<option value="OR">OR</option>
+												<option value="PA">PA</option>
+												<option value="PR">PR</option>
+												<option value="RI">RI</option>
+												<option value="SC">SC</option>
+												<option value="SD">SD</option>
+												<option value="TN">TN</option>
+												<option value="TX">TX</option>
+												<option value="UT">UT</option>
+												<option value="VA">VA</option>
+												<option value="VI">VI</option>
+												<option value="VT">VT</option>
+												<option value="WA">WA</option>
+												<option value="WI">WI</option>
+												<option value="WV">WV</option>
+												<option value="WY">WY</option>
+											</select>
+											<span class="field-validation-valid" data-valmsg-for="State" data-valmsg-replace="true"></span>
+										</div>
+										<div class="half">
+											<label for="Zip">ZIP Code</label>
+											<input data-val="true" data-val-maxlength="The field ZIP Code must be a string or array type with a maximum length of '5'." data-val-maxlength-max="5" data-val-regex="Please enter a valid ZIP code." data-val-regex-pattern="^(\d{5})(\-?\d{4}){0,1}$" data-val-required="Please enter your ZIP code." id="Zip" maxlength="5" name="Zip" type="text" value="">
+											<span class="field-validation-valid" data-valmsg-for="Zip" data-valmsg-replace="true"></span>
+										</div>
+									</div>
+								</div>
+								<p>
+									<button id="step_2_submit" class="btn btn-primary" type="submit">Submit</button>
+								</p>
+								<div class="error hidden" id="Server-error"></div>
+							</div>
+						</section>
+						<section class="success hidden">
+							<div class="content">
+								<h2>Thank you</h2>
+								<h3>We have received your request.</h3>
+
+							</div>
+						</section>
+					</form>
+				</div>
+			</article>
+		</div>
+	</div>
+
+	<!-- *********************** -->
+<!-- **** CODE ENDS **** *** -->
+	<!-- *********************** -->
+</div>
+<div id="isi">
+	<aside class="section">
+		<article>
+			<button class="fixed_isi_trigger" aria-expanded="false" aria-controls="fixed_isi" aria-label="ISI Expand Button">
+				<span></span>
+			</button>
+			<div class="isi-header">
+				<h2>Important Safety Information</h2>
+			</div>
+			<ul>
+				<li>ENTYVIO (vedolizumab) for injection is contraindicated in patients who have had a known serious or severe hypersensitivity reaction to ENTYVIO or any of its excipients.</li>
+
+				<li>Infusion-related reactions and hypersensitivity reactions including anaphylaxis, dyspnea, bronchospasm, urticaria, flushing, rash, and increased blood pressure and heart rate have been reported. These reactions may occur with the first or subsequent infusions and may vary in their time of onset from during infusion or up to several hours post-infusion. If anaphylaxis or other serious infusion-related or hypersensitivity reactions occur, discontinue administration of ENTYVIO immediately and initiate appropriate treatment.</li>
+
+				<li>Patients treated with ENTYVIO are at increased risk for developing infections. Serious infections have been reported in patients treated with ENTYVIO, including anal abscess, sepsis (some fatal), tuberculosis, salmonella sepsis, Listeria meningitis, giardiasis, and cytomegaloviral colitis. ENTYVIO is not recommended in patients with active, severe infections until the infections are controlled. Consider withholding ENTYVIO in patients who develop a severe infection while on treatment with ENTYVIO. Exercise caution in patients with a history of recurring severe infections. Consider screening for tuberculosis (TB) according to the local practice.</li>
+
+				<li>Progressive multifocal leukoencephalopathy (PML), a rare and often fatal opportunistic infection of the central nervous system (CNS), has been reported with systemic immunosuppressants, including another integrin receptor antagonist. PML is caused by the John Cunningham (JC) virus and typically only occurs in patients who are immunocompromised. One case of PML in an ENTYVIO-treated patient with multiple contributory factors has been reported in the postmarketing setting (e.g., human immunodeficiency virus [HIV] infection with a CD4 count of 300 cells/mm<sup>3</sup>
+					and prior and concomitant immunosuppression). Although unlikely, a risk of PML cannot be ruled out. Monitor patients for any new or worsening neurological signs or symptoms. Typical signs and symptoms associated with PML are diverse, progress over days to weeks, and include progressive weakness on one side of the body or clumsiness of limbs, disturbance of vision, and changes in thinking, memory, and orientation leading to confusion and personality changes. If PML is suspected, withhold dosing with ENTYVIO and refer to a neurologist; if confirmed, discontinue ENTYVIO dosing permanently.</li>
+
+				<li>There have been reports of elevations of transaminase and/or bilirubin in patients receiving ENTYVIO. ENTYVIO should be discontinued in patients with jaundice or other evidence of significant liver injury.</li>
+
+				<li>Prior to initiating treatment with ENTYVIO, all patients should be brought up to date with all immunizations according to current immunization guidelines. Patients receiving ENTYVIO may receive non-live vaccines and may receive live vaccines if the benefits outweigh the risks.</li>
+
+				<li>Most common adverse reactions (incidence ≥3% and ≥1% higher than placebo): nasopharyngitis, headache, arthralgia, nausea, pyrexia, upper respiratory tract infection, fatigue, cough, bronchitis, influenza, back pain, rash, pruritus, sinusitis, oropharyngeal pain, and pain in extremities.</li>
+			</ul>
+
+			<h2>Indications</h2>
+			<h3>Adult Ulcerative Colitis (UC)</h3>
+			<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active UC.</p>
+
+			<h3>Adult Crohn's Disease (CD)</h3>
+			<p>ENTYVIO (vedolizumab) is indicated in adults for the treatment of moderately to severely active CD.</p>
+
+			<p>Please see
+				<a href="https://general.takedapharm.com/ENTYVIOPI" target="_blank" rel="noreferrer">full Prescribing Information</a>, including
+				<a href="https://general.takedapharm.com/ENTYVIOMG" target="_blank" rel="noreferrer">Medication Guide</a>.</p>
+		</article>
+	</aside>
+
+</div>
