--- a/themes/custom/entyviohcp/templates/content/node--request-an-representative--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--request-an-representative--full.html.twig
@@ -52,7 +52,7 @@
 				</div>
 
 				<div class="main-container">
-					<form action="/vital/requestrep" method="post" class="requestRep" id="requestRep" name="requestRep" novalidate="novalidate">
+					<form action="https://www.entyviohcp.com/vital/requestrep" method="post" class="requestRep" id="requestRep" name="requestRep" novalidate="novalidate">
 						<input name="__RequestVerificationToken" type="hidden" value="MAy9uKkRHTW5k9NEJ3IaJbLqf_RjveAHxRIeJskSNpZim52FzvESAuQOj0XQC7a-mTgA3bX8UZnkH5VSHPMUqPsVOVtAjLBZro8UrOEI-MQ1">
 						<section data-step="1">
 							<div>
@@ -119,7 +119,7 @@
 									<span class="field-validation-valid" data-valmsg-for="LastName" data-valmsg-replace="true"></span>
 								</div>
 								<p>
-									<button id="step_1_submit" class="btn btn-primary" type="submit" formaction="{{ base_path }}vital/validateuser">Continue</button>
+									<button id="step_1_submit" class="btn btn-primary" type="submit" formaction="https://www.entyviohcp.com/vital/validateuser">Continue</button>
 								</p>
 								<div class="error hidden"></div>
 							</div>
