--- a/themes/custom/entyviohcp/css/header.css
+++ b/themes/custom/entyviohcp/css/header.css
@@ -27,7 +27,7 @@ header{
   header[data-device="desktop"] {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0 !important;
     width: 100%;
     box-shadow: 0 0 5px 2px rgb(155 40 140 / 25%);
     z-index: 11;
